--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -1,8 +1,6 @@
-if [ ! -d $OPENSHIFT_DATA_DIR/shout ]; then
+if [ ! -d $OPENSHIFT_DATA_DIR/node-modules/shuo ]; then
   cd $OPENSHIFT_DATA_DIR
-  git clone https://github.com/erming/shout.git
-  cd shout
-  npm install
+  npm install shuo
 fi
 
 if [ ! -d $OPENSHIFT_DATA_DIR/store ]; then
@@ -12,6 +10,6 @@ if [ ! -d $OPENSHIFT_DATA_DIR/store ]; then
   mkdir store
   mkdir store/users
   cp $OPENSHIFT_REPO_DIR/user.json store/users/default.json
-  echo 'Please run ./shout add <username> from the repo directory to access Shout'
+  echo 'Please run ./shout add <username> from the repo directory to access Shuo'
   echo '-------------------------'
 fi
